<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Monitoreo">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/RegistroColab"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="390dp"
        android:layout_height="227dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_nom"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/Nom_Colab" />

            <EditText
                android:id="@+id/eNom"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/txt_Apll_Col"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/Apellido_Pat_Col" />

            <EditText
                android:id="@+id/eAPCol"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/txt_Apll_Mat_col"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/Apellido_Mat_Col" />

            <EditText
                android:id="@+id/eAMCol"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/txt_mail_col"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/Mail_Col" />

            <EditText
                android:id="@+id/eMailCol"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/txt_num_col"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/Telefono_Cola" />

            <EditText
                android:id="@+id/eTCol"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="phone" />

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageViewCol"
        android:layout_width="309dp"
        android:layout_height="177dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:srcCompat="@mipmap/perfil" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="179dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Guardar_Datos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCol"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnCont"
        android:layout_width="145dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Continue_Col"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCol"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_camara"
        android:layout_width="179dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="tomarFoto"
        android:text="@string/tomar_foto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toEndOf="@+id/btnGuardar"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCol" />

</androidx.constraintlayout.widget.ConstraintLayout>